oracle/prod/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: searxng/searxng
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/searxng
      volumes:
        - name: config-volume
          configMap:
            name: searxng-config
