oracle/prod/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
spec:
  rules:
    - host: searxng.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng-service
                port:
                  number: 8080
